<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优聘</string>
    <string name="chat_menu_personal">查看个人资料</string>
    <string name="chat_menu_clear">清空聊天记录</string>
    <string name="chat_menu_claim">举报</string>
    <string name="chat_menu_delete">删除此人</string>
    <string name="chat_menu_cancel">取消</string>
    
    
     <string name="receive_the_passthrough">Receive cmd message : action：</string>
    
    <string name="demo_min_label"></string>
    <string name="demo_max_label"></string>
    <string name="text_ack_msg">read</string>
    <string name="text_delivered_msg">delivered</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_pushtotalk">按住讲话</string>
    <string name="button_send">发送</string>
        <string name="download_the_pictures">下载图片: 0%</string>
         <string name="download_the_pictures_new">下载图片:</string>
    <string name="Send_the_following_pictures">发送如下图片吗?</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="file_does_not_exist">文件不存在</string>
    <string name="the_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="connect_failuer_toast">please check the network or try again later</string>
    <string name="send_fail">send failed</string>
        <string name="Logoff_notification">下线通知</string>
    <string name="not_download">未下载:</string>
    <string name="attach_smile">表情</string>
      <string name="ok">确定</string>
      <string name="Remove_the_notification">移除通知</string>
      <string name="em_user_remove">此用户已被移除</string>
    <string name="attach_picture">图片</string>
     <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">voice call</string>
    <string name="attach_video_call">video call</string>
    <string name="move_up_to_cancel">手指上滑 取消发送</string>
    <string name="release_to_cancel">松开手指 取消发送</string>
    <string name="recoding_fail">录制失败，请稍候再试</string>
     <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检查服务器连接是否正常</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="Is_download_voice_click_later">Is download voice, click later</string>
    <string name="location_message">The location information</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">voice</string>
    <string name="picture">[picture]</string>
    <string name="video">[video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[voice call]</string>
<drawable name="block_normal">#ffffff</drawable>
 <drawable name="block_pressed">#33000033</drawable>
</resources>